<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.popmovies.DetailActivity">

    <TextView
        android:id="@+id/title_detail_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/scrollview_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/abuabu">
                <com.example.android.popmovies.utilities.SquaredImageView
                    android:id="@+id/poster_detail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@color/colorPrimary"
                    android:scaleType="fitXY" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorAccent"
                android:orientation="horizontal"
                android:padding="10dp">
                <TextView
                    android:id="@+id/relase_detail_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/relase"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/rating_detail_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/rating"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
                <TextView
                    android:id="@+id/favorite_detail_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/favortie"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <TextView
                android:id="@+id/overview_detail_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/overview" />
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/trailer" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_trailer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#dadada"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="bold"
                android:padding="10dp"
                android:text="@string/review" />
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_review"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>



